# Telegram-Drive-Split-Part

./: .gitignore  CHANGELOG.md  LICENSE  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  main.tsx  types.ts  utils.ts
app/src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/android-native/: MainActivity.kt  UploadForegroundService.kt  inject.sh  patch_manifest.py
app/src-tauri/capabilities/: default.json  mobile.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: android_uri.rs  api_routes.rs  bandwidth.rs  db.rs  jni_cache.rs  lib.rs  models.rs  server.rs  share_routes.rs  upload_service.rs
app/src-tauri/src/commands/: auth.rs  fs.rs  mod.rs  preview.rs  settings.rs  sharing.rs  streaming.rs
app/src-tauri/tests/: android_uri_cache_tests.rs
app/src/components/: Dashboard.tsx
app/src/components/dashboard/: ContextMenu.tsx  FileExplorer.tsx  SettingsModal.tsx  ShareDialog.tsx
app/src/components/desktop/: DesktopDashboard.tsx
app/src/components/desktop/dashboard/: BandwidthWidget.tsx  ExternalDropBlocker.tsx  PdfViewer.tsx  SettingsModal.tsx
app/src/components/mobile/: ActionPopover.tsx  MobileDashboard.tsx  TouchFileList.tsx
app/src/components/shared/: AdGateway.tsx  AdsterraBanner.tsx  AuthWizard.tsx
app/src/hooks/: useFileDownload.ts  useFileOperations.ts  useFileUpload.ts  useNetworkStatus.ts  useTelegramConnection.ts
