[package]
name = "app"
version = "1.9.7"
description = "Turn your Telegram account into an unlimited, secure cloud storage drive. an Open-source desktop app built with Tauri, Rust, and React."
authors = ["Cameron Amer"]
edition = "2021"



[lib]

name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Note: a multi-connection fork exists at github.com/xelema/grammers (branch
# multi-connection) but free Telegram accounts hit FLOOD_PREMIUM_WAIT with it;
# upstream single-connection is the right default for non-premium accounts.
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio = { version = "1", features = ["full"] }

tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
chrono = "0.4"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2"
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
futures = "0.3"
async-stream = "0.3"
actix-rt = "2"
tauri-plugin-process = "2"
bitflags = "=2.10.0"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"
rand = "0.9"
sha2 = "0.10"
bcrypt = "0.16"
constant_time_eq = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
rar = "0.4"
sevenz-rust2 = "0.7"
walkdir = "2"
sqlite = { version = "0.37.0", features = ["bundled"] }
mp4parse = "0.17"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "socks", "http2", "charset"] }
sysinfo = "0.30"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1.1"
[package.metadata.tauri.bundle.windows]
# Embed the WebView2 bootstrapper so the app works on Windows systems
# where the WebView2 runtime is not pre-installed (fresh installs, servers, etc.)
webview-install-mode = "embeddir"

